# oway

./: dune  dune-project  flake.nix  oway.opam
lib/: dune
test/: dune
wlroots/config/: wlroots_config.ml
wlroots/ffi/: ffi.ml
wlroots/lib/: backend.ml  wlroots.mli
wlroots/types/: types.ml
